add share cal buttons

--- a/sportchemy/i18n/en.yaml
+++ b/sportchemy/i18n/en.yaml
@@ -1,14 +1,16 @@
 # sportchemy
 
-- id: sportchemy_team_home
-  translation: Home
+- id: sportchemy_add_to
+  translation: Add to
+- id: sportchemy_court
+  translation: Court
+- id: sportchemy_score
+  translation: Score
 - id: sportchemy_team_away
   translation: Away
+- id: sportchemy_team_home
+  translation: Home
 - id: sportchemy_date
   translation: Date
 - id: sportchemy_time
   translation: Time
-- id: sportchemy_score
-  translation: Score
-- id: sportchemy_court
-  translation: Court
