--- a/sportchemy/i18n/it.yaml
+++ b/sportchemy/i18n/it.yaml
@@ -1,14 +1,16 @@
 # sportchemy
 
-- id: sportchemy_team_home
-  translation: Locali
+- id: sportchemy_add_to
+  translation: Aggiungi a
+- id: sportchemy_court
+  translation: Campo
+- id: sportchemy_score
+  translation: Risultato
 - id: sportchemy_team_away
   translation: Ospiti
+- id: sportchemy_team_home
+  translation: Locali
 - id: sportchemy_date
   translation: Data
 - id: sportchemy_time
   translation: Ora
-- id: sportchemy_score
-  translation: Risultato
-- id: sportchemy_court
-  translation: Campo
