fallback if no games in query

--- a/sportchemy/i18n/en.yaml
+++ b/sportchemy/i18n/en.yaml
@@ -8,6 +8,8 @@
   translation: Court
 - id: sportchemy_league
   translation: League
+- id: sportchemy_no_games
+  translation: No games scheduled
 - id: sportchemy_score
   translation: Score
 - id: sportchemy_team_away
