--- a/sportchemy/i18n/it.yaml
+++ b/sportchemy/i18n/it.yaml
@@ -8,6 +8,8 @@
   translation: Campo
 - id: sportchemy_league
   translation: Campionato
+- id: sportchemy_no_games
+  translation: Nessuna partita in programma
 - id: sportchemy_score
   translation: Risultato
 - id: sportchemy_team_away
